--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # build-logic stuff
-javadocPublishRoot=https://jd.mizule.dev/personal/pulse/
+javadocPublishRoot=https://jd.mizule.dev/personal/ares/
 githubOrg=powercasgamer
 projectAuthor=powercasgamer
 githubRepo=Ares
